# vtfontmaker

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: application.cpp  application.h  canvas.cpp  canvas.h  capabilities.cpp  capabilities.h  charsets.cpp  charsets.h  coloring.cpp  coloring.h  common_dialog.cpp  common_dialog.h  dialog.cpp  dialog.h  font.cpp  font.h  glyphs.cpp  glyphs.h  iso2022.cpp  iso2022.h  keyboard.cpp  keyboard.h  macros.cpp  macros.h  main.cpp  menu.cpp  menu.h  os.cpp  os.h  status.cpp  status.h  vt.cpp  vt.h
